--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy
 powerlaw
 pylexibank
-pyclts
+pyclts @ git+https://github.com/cldf-clts/pyclts.git#egg=pyclts
 linse @ git+https://github.com/lingpy/linse.git#egg=linse
