Refactoring to process families in parallel

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ pyclts @ git+https://github.com/cldf-clts/pyclts.git#egg=pyclts
 linse @ git+https://github.com/lingpy/linse.git#egg=linse
 sinopy
 packaging==20.4
+igraph
 lingrex
 lexibank_analysed @ git+https://github.com/lexibank/lexibank-analysed.git
+dataclasses
